1999-10-25  David Byers  <davby@ida.liu.se>

	* parse.el (lyskom-char-p): New implementation to fix spurious
	protocol errors.

1999-10-25  David Kagedal  <davidk@lysator.liu.se>

	* option-edit.el (lyskom-custom-variables): Reversed logic for
	kom-reading-puts-comments-in-pointers-last.

1999-10-25  David Byers  <davby@ida.liu.se>

	* vars.el.in (lyskom-backtrace-list): New variable.

	* parse.el (lyskom-char-p): Make lyskom-char-p ignore whitespace
	to mimic behavior of lyskom-expect-char and friends.
	(lyskom-protocol-error): Accumulate backtraces.

1999-10-20  David Byers  <davby@ida.liu.se>

	* mship-edit.el (lp--update-membership): When we set the priority
	to under the session priority, remove the conf from the reading
	list, leave it and update the prompt. Take old priority and old
	position as arguments.
	(set-lp--entry-pri-and-pos): New function.
	(lp--yank): Use it.
	(lp--set-priority): Use it.
	(lp--bump-priority): Use it.
	(lp--move-up): Use it.
	(lp--move-down): Use it.

1999-10-19  David Byers  <davby@ida.liu.se>

	* mship-edit.el (lp--toggle-invitation): New function.
	(lp--toggle-passive): New function.
	(lp--toggle-secret): New function.
	(lp--mode-map): Added lp--toggle-invitation, lp--toggle-passive,
	lp--toggle-secret.

	* commands2.el (lyskom-print-summary-line): Test mx-author
	and mx-from to see if we should print the mx-author name.

	* edit-text.el (lyskom-edit-get-commented-author): Test mx-author
	and mx-from to see if we should print the mx-author name.

1999-10-18  David Byers  <davby@ida.liu.se>

	* utilities.el (lyskom-client-date): Off-by-one error in
	day-of-month fixed.

	* edit-text.el (lyskom-edit-get-commented-author): Print the
	name of the real author of an imported e-mail, not the importer's
	name. 

1999-10-17  David Byers  <davby@ida.liu.se>

	* utilities.el (lyskom-client-date-string): Don't add 1900 to
	result of decode-time.

Sun Oct 17 00:52:05 1999  David Byers  <davby@sen2.ida.liu.se>

	* Release av 0.46-BETA-A
